--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -8,4 +8,9 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:text="ContactsFragment" />
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/idPieChart"></com.github.mikephil.charting.charts.PieChart>
+
 </LinearLayout>
