Implemented all methods for messages layouts

--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -1,10 +1,52 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MessagesFragment" />
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/incomingFrequency_btn_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Incoming messages frequency"/>
+
+        <LinearLayout
+            android:id="@+id/incomingFrequency_layout_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="350sp"
+                android:id="@+id/idPieChartIncomingFrequency_messages"></com.github.mikephil.charting.charts.PieChart>
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/incomingSize_btn_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Incoming messages size"/>
+
+        <LinearLayout
+            android:id="@+id/incomingSize_layout_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="350sp"
+                android:id="@+id/idPieChartIncomingSize_messages"></com.github.mikephil.charting.charts.PieChart>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
