--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_people"
+            android:icon="@drawable/ic_people_black_24dp"
+            android:title="People" />
+        <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_contacts_black_24dp"
             android:title="Contacts" />
