--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,30 +5,22 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_icons8_home"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_people"
             android:icon="@drawable/ic_people_black_24dp"
             android:title="People" />
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_contacts"
             android:icon="@drawable/ic_contacts_black_24dp"
-            android:title="Contacts" />
+            android:title="Call log" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_messages"
             android:icon="@drawable/ic_message_black_24dp"
             android:title="Messages" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
