--- a/app/src/main/res/layout/fragment_app.xml
+++ b/app/src/main/res/layout/fragment_app.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f2eae3">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/appsList"
-        android:divider="@null"
-        android:dividerHeight="10dp"/>
+        android:divider="#c1838d"
+        android:dividerHeight="1dp"/>
 </android.support.constraint.ConstraintLayout>
